Adding ENABLE_ZGC
Adding the variable ENABLE_ZGC to enable the Z Garbage Collector startup flag, reducing considerably ram consumption on some rpis.